plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/XtendParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g 2011-08-24 08:47:38
 	
package org.eclipse.internal.xtend.xtend.parser; 
	
import java.util.ArrayList;
import java.util.List;

import org.eclipse.internal.xtend.expression.ast.*;
import org.eclipse.internal.xtend.xtend.ast.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class XtendParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "StringLiteral", "IntLiteral", "Identifier", "EscapeSequence", "UnicodeEscape", "OctalEscape", "HexDigit", "Letter", "JavaIDDigit", "WS", "COMMENT", "LINE_COMMENT", "XPAND_TAG_OPEN", "XPAND_TAG_CLOSE", "'import'", "';'", "'extension'", "'reexport'", "'context'", "'#'", "'if'", "'ERROR'", "'WARNING'", "':'", "'around'", "'('", "','", "'*'", "')'", "'::'", "'private'", "'cached'", "'JAVA'", "'.'", "'create'", "'Collection'", "'List'", "'Set'", "'let'", "'='", "'->'", "'?'", "'then'", "'else'", "'switch'", "'{'", "'case'", "'default'", "'}'", "'||'", "'&&'", "'implies'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", "'/'", "'!'", "'GLOBALVAR'", "'new'", "'false'", "'true'", "'null'", "'typeSelect'", "'collect'", "'select'", "'selectFirst'", "'reject'", "'exists'", "'notExists'", "'sortBy'", "'forAll'", "'|'", "'['", "']'"
    };
    public static final int EOF=-1;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int StringLiteral=4;
    public static final int IntLiteral=5;
    public static final int Identifier=6;
    public static final int EscapeSequence=7;
    public static final int UnicodeEscape=8;
    public static final int OctalEscape=9;
    public static final int HexDigit=10;
    public static final int Letter=11;
    public static final int JavaIDDigit=12;
    public static final int WS=13;
    public static final int COMMENT=14;
    public static final int LINE_COMMENT=15;
    public static final int XPAND_TAG_OPEN=16;
    public static final int XPAND_TAG_CLOSE=17;

    // delegates
    // delegators


        public XtendParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public XtendParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return XtendParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g"; }


    	private ExtensionFactory factory;
    	public XtendParser(TokenStream stream, ExtensionFactory factory) {
    		this(stream);
    		this.factory = factory;
    	}
    	
    	protected Identifier id(Token t) {
    		if (t == null)
    			return null;
    		CommonToken ct = (CommonToken) t;
    		Identifier id = new Identifier(t.getText());
    		id.setStart(ct.getStartIndex());
    		id.setEnd(ct.getStopIndex());
    		id.setLine(ct.getLine());
    		return id;
    	}



    // $ANTLR start "file"
    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:43:1: file returns [ExtensionFile r] : (nsi= nsImport )* (exti= extImport )* (ext= extension | a= around | c= check )* EOF ;
    public ExtensionFile file() throws RecognitionException {
        ExtensionFile r = null;

        NamespaceImportStatement nsi = null;

        ExtensionImportStatement exti = null;

        Extension ext = null;

        Around a = null;

        Check c = null;


        List nsimports = new ArrayList(), extimports = new ArrayList(), extensions = new ArrayList(), arounds = new ArrayList(), checks = new ArrayList();
        try {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:44:155: ( (nsi= nsImport )* (exti= extImport )* (ext= extension | a= around | c= check )* EOF )
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:45:2: (nsi= nsImport )* (exti= extImport )* (ext= extension | a= around | c= check )* EOF
            {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:45:2: (nsi= nsImport )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==18) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:45:3: nsi= nsImport
            	    {
            	    pushFollow(FOLLOW_nsImport_in_file51);
            	    nsi=nsImport();

            	    state._fsp--;
            	    if (state.failed) return r;
            	    if ( state.backtracking==0 ) {
            	      nsimports.add(nsi);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:46:2: (exti= extImport )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==20) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:46:3: exti= extImport
            	    {
            	    pushFollow(FOLLOW_extImport_in_file61);
            	    exti=extImport();

            	    state._fsp--;
            	    if (state.failed) return r;
            	    if ( state.backtracking==0 ) {
            	      extimports.add(exti);
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:47:2: (ext= extension | a= around | c= check )*
            loop3:
            do {
                int alt3=4;
                switch ( input.LA(1) ) {
                case Identifier:
                case 34:
                case 35:
                case 38:
                case 39:
                case 40:
                case 41:
                    {
                    alt3=1;
                    }
                    break;
                case 28:
                    {
                    alt3=2;
                    }
                    break;
                case 22:
                    {
                    alt3=3;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:47:3: ext= extension
            	    {
            	    pushFollow(FOLLOW_extension_in_file71);
            	    ext=extension();

            	    state._fsp--;
            	    if (state.failed) return r;
            	    if ( state.backtracking==0 ) {
            	      extensions.add(ext);
            	    }

            	    }
            	    break;
            	case 2 :
            	    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:47:42: a= around
            	    {
            	    pushFollow(FOLLOW_around_in_file81);
            	    a=around();

            	    state._fsp--;
            	    if (state.failed) return r;
            	    if ( state.backtracking==0 ) {
            	      arounds.add(a);
            	    }

            	    }
            	    break;
            	case 3 :
            	    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:47:73: c= check
            	    {
            	    pushFollow(FOLLOW_check_in_file91);
            	    c=check();

            	    state._fsp--;
            	    if (state.failed) return r;
            	    if ( state.backtracking==0 ) {
            	      checks.add(c);
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_file99); if (state.failed) return r;
            if ( state.backtracking==0 ) {
               r = factory.createExtensionFile(nsimports,extimports,extensions,arounds,checks);
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return r;
    }
    // $ANTLR end "file"


    // $ANTLR start "nsImport"
    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:52:1: nsImport returns [NamespaceImportStatement r] : 'import' t= type ';' ;
    public NamespaceImportStatement nsImport() throws RecognitionException {
        NamespaceImportStatement r = null;

        Identifier t = null;


        try {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:52:47: ( 'import' t= type ';' )
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:53:2: 'import' t= type ';'
            {
            match(input,18,FOLLOW_18_in_nsImport117); if (state.failed) return r;
            pushFollow(FOLLOW_type_in_nsImport121);
            t=type();

            state._fsp--;
            if (state.failed) return r;
            if ( state.backtracking==0 ) {
              r = factory.createNsImport(t);
            }
            match(input,19,FOLLOW_19_in_nsImport125); if (state.failed) return r;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return r;
    }
    // $ANTLR end "nsImport"


    // $ANTLR start "extImport"
    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:56:1: extImport returns [ExtensionImportStatement r] : 'extension' t= type (exported= 'reexport' )? ';' ;
    public ExtensionImportStatement extImport() throws RecognitionException {
        ExtensionImportStatement r = null;

        Token exported=null;
        Identifier t = null;


        try {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:56:48: ( 'extension' t= type (exported= 'reexport' )? ';' )
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:57:2: 'extension' t= type (exported= 'reexport' )? ';'
            {
            match(input,20,FOLLOW_20_in_extImport140); if (state.failed) return r;
            pushFollow(FOLLOW_type_in_extImport144);
            t=type();

            state._fsp--;
            if (state.failed) return r;
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:57:21: (exported= 'reexport' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==21) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:57:22: exported= 'reexport'
                    {
                    exported=(Token)match(input,21,FOLLOW_21_in_extImport149); if (state.failed) return r;

                    }
                    break;

            }

            match(input,19,FOLLOW_19_in_extImport153); if (state.failed) return r;
            if ( state.backtracking==0 ) {
               r = factory.createExtensionFileImport(t,id(exported));
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return r;
    }
    // $ANTLR end "extImport"


    // $ANTLR start "check"
    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:60:1: check returns [Check ext] : 'context' t= type ( '#' f= identifier )? ( 'if' guard= expression )? (sev1= 'ERROR' | 'WARNING' ) msg= expression ':' expr= expression ';' ;
    public Check check() throws RecognitionException {
        Check ext = null;

        Token sev1=null;
        Identifier t = null;

        Identifier f = null;

        Expression guard = null;

        Expression msg = null;

        Expression expr = null;


        try {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:60:26: ( 'context' t= type ( '#' f= identifier )? ( 'if' guard= expression )? (sev1= 'ERROR' | 'WARNING' ) msg= expression ':' expr= expression ';' )
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:2: 'context' t= type ( '#' f= identifier )? ( 'if' guard= expression )? (sev1= 'ERROR' | 'WARNING' ) msg= expression ':' expr= expression ';'
            {
            match(input,22,FOLLOW_22_in_check168); if (state.failed) return ext;
            pushFollow(FOLLOW_type_in_check172);
            t=type();

            state._fsp--;
            if (state.failed) return ext;
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:18: ( '#' f= identifier )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==23) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:19: '#' f= identifier
                    {
                    match(input,23,FOLLOW_23_in_check174); if (state.failed) return ext;
                    pushFollow(FOLLOW_identifier_in_check177);
                    f=identifier();

                    state._fsp--;
                    if (state.failed) return ext;

                    }
                    break;

            }

            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:37: ( 'if' guard= expression )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==24) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:38: 'if' guard= expression
                    {
                    match(input,24,FOLLOW_24_in_check182); if (state.failed) return ext;
                    pushFollow(FOLLOW_expression_in_check186);
                    guard=expression();

                    state._fsp--;
                    if (state.failed) return ext;

                    }
                    break;

            }

            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:62: (sev1= 'ERROR' | 'WARNING' )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==25) ) {
                alt7=1;
            }
            else if ( (LA7_0==26) ) {
                alt7=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ext;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:63: sev1= 'ERROR'
                    {
                    sev1=(Token)match(input,25,FOLLOW_25_in_check193); if (state.failed) return ext;

                    }
                    break;
                case 2 :
                    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:61:76: 'WARNING'
                    {
                    match(input,26,FOLLOW_26_in_check195); if (state.failed) return ext;

                    }
                    break;

            }

            pushFollow(FOLLOW_expression_in_check200);
            msg=expression();

            state._fsp--;
            if (state.failed) return ext;
            match(input,27,FOLLOW_27_in_check202); if (state.failed) return ext;
            pushFollow(FOLLOW_expression_in_check207);
            expr=expression();

            state._fsp--;
            if (state.failed) return ext;
            match(input,19,FOLLOW_19_in_check209); if (state.failed) return ext;
            if ( state.backtracking==0 ) {
              ext = factory.createCheck(t, f, guard, sev1!=null, msg, expr);
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ext;
    }
    // $ANTLR end "check"


    // $ANTLR start "around"
    // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:66:1: around returns [Around r] : 'around' pc= pointcut '(' (p= declaredParameterList ( ( ',' )? wildparams= '*' )? | wildparams= '*' )? ')' ':' expr= expression ';' ;
    public Around around() throws RecognitionException {
        Around r = null;

        Token wildparams=null;
        Identifier pc = null;

        List<DeclaredParameter> p = null;

        Expression expr = null;


        try {
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:66:28: ( 'around' pc= pointcut '(' (p= declaredParameterList ( ( ',' )? wildparams= '*' )? | wildparams= '*' )? ')' ':' expr= expression ';' )
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:67:5: 'around' pc= pointcut '(' (p= declaredParameterList ( ( ',' )? wildparams= '*' )? | wildparams= '*' )? ')' ':' expr= expression ';'
            {
            match(input,28,FOLLOW_28_in_around230); if (state.failed) return r;
            pushFollow(FOLLOW_pointcut_in_around234);
            pc=pointcut();

            state._fsp--;
            if (state.failed) return r;
            match(input,29,FOLLOW_29_in_around236); if (state.failed) return r;
            // /Users/thoms/Development/checkout/eclipse/org.eclipse.xpand/plugins/org.eclipse.xtend/src/org/eclipse/internal/xtend/xtend/parser/Xtend.g:67:30: (p= declaredParameterList ( ( ',' )? wildparams= '*' )? | wildparams= '*' )?
            int alt10=3;
            int LA10_0 = input.LA(1);
